increase JVM memory to support running hundreds of users test